[package]
name = "xdg-utils"
version = "0.4.0"
authors = ["Manos Pitsidianakis <el13635@mail.ntua.gr>"]
description = "Query system for default apps using XDG MIME databases. Rust implementations of some common functions in the freedesktop project `xdg-utils`."
repository = "https://github.com/meli/xdg-utils"
readme = "README.md"
keywords = ["mime", "xdg"]
categories = ["os::unix-apis", "filesystem"]
license = "GPL-3.0-or-later"

[dependencies]
